<resources>
    <string name="app_name">Overly GTD Todo</string>
    <string name="app_description">
        Reminders, with a popping twist.\n
        An educational implementation of Facebook-style floaters.
    </string>
    <string name="app_version_formattable">Version %1$s (release %2$s)</string>
    <string name="app_sourcelink">https://bitbucket.org/senpl/android-popup-reminder</string>

    <string name="floater_title">Popup is active</string>
    <string name="floater_description">Touch to open Popup Reminder</string>
    <string name="start_floater">Start floater</string>
    <string name="stop_floater">Stop floater</string>

    <string name="grant_permission">Grant Permission</string>
    <string name="permission_explanation">The app needs permission to draw over other apps to show popups.</string>
    <string name="permission_not_granted">Permission not granted. Please try again.</string>

    <string name="title_notifications">Notifications</string>
    <string name="title_seen">Seen</string>
    <string name="title_reminders">Reminders</string>
    <string name="title_settings">Settings</string>
    <string name="title_add_reminder">Add Reminder</string>
    <string name="title_edit_reminder">Edit Reminder</string>
    <string name="title_logs">Logs</string>
    <string name="title_about">About</string>
    <string name="title_about_libs">Third-party Libraries</string>
    <string name="title_about_audio">Popup Sounds</string>

    <string name="about_libraries">Third-party libraries</string>
    <string name="about_audio">Popup sounds</string>
    <string name="about_logs">App logs</string>
    <string name="about_sourcelink">Source code</string>

    <string name="bottommenu_settings">Settings</string>
    <string name="bottommenu_about">About</string>

    <string name="label_reminder_title">Title</string>
    <string name="label_reminder_context">Context</string>
    <string name="label_reminder_description">Description</string>
    <string name="label_reminder_time">Trigger time</string>
    <string name="label_hide_time">Hide after time</string>

    <string name="done">Done</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="mark_seen">Mark seen</string>
    <string name="checkmark">✓</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>

    <string name="export_database">Export database</string>
    <string name="error_trigger_time_not_set">Please set trigger time.</string>
    <string name="error_title_empty">Title is empty.</string>
    <string name="error_trigger_time_past">Can\'t set reminder in the past.</string>
    <string name="list">list</string>

    <string name="reminders_empty">No reminders added.</string>
    <string name="reminder_added">Reminder added.</string>
    <string name="reminder_edited">Reminder edited.</string>
    <string name="reminders_deleted">Reminders deleted.</string>
    <string name="reminder_deleted">Reminder deleted.</string>
    <string name="todos_empty">No Todo added.</string>
    <string name="todo_added">Todo added.</string>
    <string name="todo_edited">Todo edited.</string>
    <string name="todos_deleted">Todos deleted.</string>
    <string name="todo_deleted">Todo deleted.</string>
    <string name="notifications_empty">No notifications yet.</string>
    <string name="notifications_marked_seen">Notifications marked seen.</string>
    <string name="notification_marked_seen">Notification marked seen.</string>
    <string name="notifications_deleted">Notifications deleted.</string>
    <string name="notification_deleted">Notification deleted.</string>

    <string name="reminder_trigger_label">Once on</string>
    <string name="reminder_interval_label">Repeat every</string>
    <string-array name="interval_types">
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string-array name="interval_types_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="min_interval">10 minutes</string>
    <string name="max_interval">1 year</string>

    <string name="error_interval_empty">Please enter an interval.</string>
    <string name="error_no_time_type_selected">Please select a trigger time type</string>
    <string name="error_interval_out_of_range">Interval is out of range; should be from %1$s to %2$s.</string>

    <string name="reminder_overview_trigger">Triggering on %1$s</string>
    <string name="reminder_overview_triggered">Triggered on %1$s</string>
    <string name="reminder_overview_interval">Trigger every %1$s %2$s starting %3$s</string>

    <string name="logs_empty">No logs saved.</string>
    <string name="log_menu_sort_ascending">Sort Ascending</string>
    <string name="log_menu_sort_descending">Sort Descending</string>
    <string name="log_menu_clear">Clear</string>

    <string-array name="popup_sounds_readable">
        <item>Ping Ding</item>
        <item>Message Ding</item>
    </string-array>

    <string-array name="popup_sounds_values">
        <item>ping_ding</item>
        <item>message_ding</item>
    </string-array>

    <string name="freesoundorg_link">FreeSound.org</string>
    <string name="cc_by_30">CC-BY-3.0</string>
    <string name="cc_by_nc_30">CC-BY-NC-3.0</string>

    <string name="about_sound_pingding">Pingding</string>
    <string name="about_sound_pingding_author">By RICHERlandTV</string>
    <string name="about_sound_pingding_link">https://freesound.org/people/RICHERlandTV/sounds/351550/</string>

    <string name="about_sound_messageding">Message Ding</string>
    <string name="about_sound_messageding_author">By Robinhood76</string>
    <string name="about_sound_messageding_link">https://freesound.org/people/Robinhood76/sounds/334914/</string>

    <string name="prefstring_pref_cat_popups">Popups</string>
    <string name="prefkey_pref_cat_popups">pref_cat_popups</string>

    <string name="prefkey_pref_popup_sound_enabled">pref_popup_sound_enabled</string>
    <string name="prefstring_pref_popup_sound_enabled">Play sound when a popup appears</string>

    <string name="prefkey_pref_popup_sound">pref_popup_sound</string>
    <string name="prefstring_pref_popup_sound">Popup sound</string>
    <string name="default_popup_sound">ping_ding</string>

    <string name="prefkey_pref_popup_sound_vol">pref_popup_sound_vol</string>
    <string name="prefstring_pref_popup_sound_vol">Popup sound volume</string>
    <string name="default_popup_sound_volume">50</string>

    <string name="prefkey_pref_play_popup_sound">pref_play_popup_sound</string>
    <string name="prefstring_pref_play_popup_sound">Play popup sound</string>

    <string name="prefkey_pref_auto_mark_seen">pref_auto_mark_seen</string>
    <string name="prefstring_pref_auto_mark_seen">Automatically mark seen on opening popup</string>
    <string name="prefdesc_pref_auto_mark_seen">Clicking the popup will mark all notifications as seen</string>

    <string name="prefkey_pref_cat_reminders">pref_cat_reminders</string>
    <string name="prefstring_pref_cat_reminders">Reminders</string>

    <string name="prefkey_pref_prefill_with_current_time">pref_prefill_with_current_time</string>
    <string name="prefstring_pref_prefill_with_current_time">Use current time for trigger time by default</string>
    <string name="prefdesc_pref_prefill_with_current_time">Prefill the time fields with current time by default</string>

    <string name="default_interval">1</string>
    <string name="prefkey_pref_default_interval">pref_default_interval</string>
    <string name="prefstring_pref_default_interval">Default interval</string>

    <string name="prefkey_pref_default_interval_type">pref_default_interval_type</string>
    <string name="prefstring_pref_default_interval_type">Default interval type</string>
    <string name="default_interval_type">1</string>
    <string name="add_task">Add</string>
    <string name="expandedview_open_app">Open</string>
    <string name="log_menu_start_floater">Start Floater</string>
    <string name="minimalize">Hide</string>
    <string name="next_action">Next action</string>
    <string name="next_action_short">Next</string>
    <string name="delete_seen">Clean seen</string>
</resources>
