<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="batrand.android.popupreminder.views.AboutSoundsActivity"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/about_sound_card_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/about_sound_card_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_sound_pingding"
                android:textSize="@dimen/about_sound_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_sound_pingding_author"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc_by_30"
                android:layout_gravity="end"/>
            <Button
                android:id="@+id/about_sound_linkbutton_pingding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/PrimaryColorBackgroundButton"
                android:text="@string/freesoundorg_link"
                android:layout_gravity="end"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/about_sound_card_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/about_sound_card_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_sound_messageding"
                android:textSize="@dimen/about_sound_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_sound_messageding_author"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc_by_nc_30"
                android:layout_gravity="end"/>
            <Button
                android:id="@+id/about_sound_linkbutton_messageding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/PrimaryColorBackgroundButton"
                android:text="@string/freesoundorg_link"
                android:layout_gravity="end"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
