<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="batrand.android.popupreminder.views.AboutActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/app_icon_rounded"
                android:layout_centerInParent="true"/>
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/app_version_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="Version 1.0.12"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <include layout="@layout/view_about_button_separator"/>

        <LinearLayout
            android:id="@+id/about_button_libs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_button_height"
            android:orientation="vertical"
            android:clickable="true"
            android:background="?selectableItemBackground">

            <Button
                android:id="@+id/button_adding"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="@dimen/about_button_margin"
                android:text="@string/list"
                android:textSize="@dimen/about_button_text" />
            <Button
                android:id="@+id/export_database_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="@dimen/about_button_margin"
                android:text="@string/export_database"
                android:textSize="@dimen/about_button_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="@dimen/about_button_margin"
                android:text="@string/about_libraries"
                android:textSize="@dimen/about_button_text"/>
        </LinearLayout>

        <include layout="@layout/view_about_button_separator"/>

        <LinearLayout
            android:id="@+id/about_button_audio"
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_button_height"
            android:orientation="vertical"
            android:clickable="true"
            android:background="?selectableItemBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="@dimen/about_button_margin"
                android:text="@string/about_audio"
                android:textSize="@dimen/about_button_text"/>
        </LinearLayout>

        <include layout="@layout/view_about_button_separator"/>

        <LinearLayout
            android:id="@+id/about_button_logs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_button_height"
            android:orientation="vertical"
            android:clickable="true"
            android:background="?selectableItemBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="@dimen/about_button_margin"
                android:text="@string/about_logs"
                android:textSize="@dimen/about_button_text"/>
        </LinearLayout>

        <include layout="@layout/view_about_button_separator"/>

        <LinearLayout
            android:id="@+id/about_button_sourcelink"
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_button_height"
            android:orientation="vertical"
            android:clickable="true"
            android:background="?selectableItemBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="@dimen/about_button_margin"
                android:text="@string/about_sourcelink"
                android:textSize="@dimen/about_button_text"/>
        </LinearLayout>

    </LinearLayout>



</ScrollView>
